--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -1,7 +1,7 @@
 // VARIABLE
 
 // FONT FAMILY
-$font-family-base: 'OpenSans', sans-serif;
+$font-family-base: 'SFProDisplay', sans-serif;
 
 $font-weight-thin: 100;           // Thin (Hairline)
 $font-weight-extra-light: 200;    // Extra Light (Ultra Light)
@@ -17,11 +17,11 @@ $font-weight-base: $font-weight-normal;
 
 // COLOR
 $color-background: #fff;
-$color-text-base: #000;
+$color-text-base: #2F3035;
 
 // FONT SIZE
-$line-height-base: 1.5;
-$font-size-base: 14px;
+$font-size-base: 20px;
+$line-height-base: 1.2;
 
 $h1: $font-size-base * 3;
 $h2: $font-size-base * 2;
