--- a/src/fonts/fonts.sass
+++ b/src/fonts/fonts.sass
@@ -8,4 +8,7 @@
 //$font-weight-extra-bold: 800     // Extra Bold (Ultra Bold)
 //$font-weight-black: 900          // Black (Heavy)
 
-+font-face('OpenSans', './open-sans/OpenSans-Regular', $weight: null, $style: null, $exts: eot woff2 woff ttf svg)
++font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Regular', $weight: 400, $style: null, $exts:  woff2 woff  )
++font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Medium', $weight: 500, $style: null, $exts:  woff2 woff  )
++font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Semibold', $weight: 600, $style: null, $exts:  woff2 woff  )
++font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Bold', $weight: 700, $style: null, $exts:  woff2 woff  )
