--- a/src/layout/base/base.sass
+++ b/src/layout/base/base.sass
@@ -29,7 +29,7 @@ body
   @-ms-viewport
     width: device-width
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul
+body, h1, h2, h3, h4, h5, h6, p, ol, ul,li
   margin: 0
   padding: 0
   font-weight: normal
@@ -37,9 +37,15 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section
   display: block
 
-ol, ul
+ol, ul, li
   list-style: none
 
 img
   max-width: 100%
   height: auto
+
+a
+  text-decoration: none
+  color: inherit
+  font-size: inherit
+  font-weight: inherit
