--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,1 +1,46 @@
-header.header HEADER
+header.header
+  .container
+    .header__top
+      .header__top-inner
+        .nav.menu
+          ul.menu__list
+            li.menu__item
+              a.menu__link(href="#") Магазины
+            li.menu__item
+              a.menu__link(href="#")  Акции
+            li.menu__item
+              a.menu__link(href="#")  Доставка и оплата
+        a.header__logo(href="#")
+          img.header__log-img(src="images/logo.svg")
+        .header__box
+          p.header__address Москва,  ул. Науки  25
+          ul.user-list
+            li.user-list__item
+              a.user-list__link(href="#")
+                img.user-list__link-img(src="images/select-icon.svg", alt="Select icon")
+            li.user-list__item
+              a.user-list__link(href="#")
+                img.user-list__link-img(src="images/user-icon.svg", alt="User icon")
+            li.user-list__item
+              a.user-list__link.basket(href="#")
+                img.user-list__link-img(src="images/basket-icon.svg", alt="Basket icon")
+                .basket__num 1
+    .header__bottom
+      ul.menu-categories 
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Квадроциклы
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Катера
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Гидроциклы
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Лодки
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Вездеходы
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Снегоходы
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Двигатели
+        li.menu-categories__item
+          a.menu-categories__link(href="#") Запчасти
+
