--- a/src/fonts/fonts.sass
+++ b/src/fonts/fonts.sass
@@ -12,3 +12,6 @@
 +font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Medium', $weight: 500, $style: null, $exts:  woff2 woff  )
 +font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Semibold', $weight: 600, $style: null, $exts:  woff2 woff  )
 +font-face('SFProDisplay', './SFProDisplay/SFProDisplay-Bold', $weight: 700, $style: null, $exts:  woff2 woff  )
+
++font-face('Barlow', './barlow/Barlow-Regular', $weight: 400, $style: null, $exts:  woff2 woff  )
++font-face('Barlow', './barlow/Barlow-Bold', $weight: 700, $style: null, $exts:  woff2 woff  )
