--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -1,5 +1,6 @@
 extends /layout/app
 
 block content
-  .container
-    | CONTENT
+  include /pages/home/intro/index
+  include /pages/home/search/index
+
