--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -3,4 +3,6 @@ extends /layout/app
 block content
   include /pages/home/intro/index
   include /pages/home/search/index
+  include /pages/home/categories/index
+
 
