--- a/src/layout/header/header.sass
+++ b/src/layout/header/header.sass
@@ -1,6 +1,6 @@
 .header
-  padding-top: 25px
-  padding-bottom: 39px
+  margin-top: 25px
+  margin-bottom: 39px
 
 .header__top-inner
   display: flex
