--- a/src/pages/home/search/index.pug
+++ b/src/pages/home/search/index.pug
@@ -2,11 +2,11 @@ section.search
   .container 
     .search__inner 
       .search__tabs 
-        a.search__tabs-item(href="#tab-1") Поиск по  номеру
+        a.search__tabs-item.search__tabs-item--active(href="#tab-1") Поиск по  номеру
         a.search__tabs-item(href="#tab-2") Поиск по марке
         a.search__tabs-item(href="#tab-3") Поиск по названию товара
       .search__content 
-        #tab-1.search__content-item 
+        #tab-1.search__content-item.search__content-item--active 
           form.search__content-form(action="#") 
             input.search__content-input(type="text" placeholder="Введите номер ")
             button.search__content-button(type="submit") искать
