--- a/src/pages/home/categories/index.sass
+++ b/src/pages/home/categories/index.sass
@@ -1,6 +1,6 @@
 .categories
-  margin-top: 40px
-  margin-bottom: 40px
+  padding-top: 40px
+  padding-bottom: 40px
 
 .categories__inner
   display: grid
@@ -10,7 +10,7 @@
 .categories__item
   display: flex
   justify-content: space-between
-  padding: 20px 20px 16px
+  padding: 20px 20px 3px 20px
   border: 1px solid #CDCDCD
   border-radius: 3px
   transition: all .3s
@@ -40,6 +40,7 @@
 
 .categories__item-text
   position: relative
+  padding-bottom: 10px
   font-size: 14px
   line-height: 17px
   color: #C4C4C4
