--- a/src/pages/home/intro/index.sass
+++ b/src/pages/home/intro/index.sass
@@ -1,6 +1,6 @@
 .intro
-  margin-top: 39px
-  margin-bottom: 39px
+  padding-top: 39px
+  padding-bottom: 39px
 
 .intro__inner
   display: flex
@@ -10,6 +10,7 @@
   position: relative
   max-width: 870px
   height: 100%
+  margin-left: 0
 
 .intro__slider-item-img
   object-fit: cover
