--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -4,5 +4,7 @@ block content
   include /pages/home/intro/index
   include /pages/home/search/index
   include /pages/home/categories/index
+  include /pages/home/products/index
+
 
 
