--- a/src/pages/home/search/index.sass
+++ b/src/pages/home/search/index.sass
@@ -1,23 +1,23 @@
 .search
-  margin-top: 39px
-  margin-bottom: 40px
+  padding-top: 44px
+  padding-bottom: 40px
 
 .search__tabs
-  margin-bottom: 25px
+  margin-bottom: 38px
 
 .search__tabs-item
   padding: 11px 26px 12px
 
-  &--active
-    border-radius: 5px
-    background: #F0F0F4
-    font-weight: 700
+.search__tabs-item.tab--active
+  border-radius: 5px
+  background: #F0F0F4
+  font-weight: 700
 
-.search__content-item
+.tabs-content
   display: none
   
-  &--active
-    display: block
+.tabs-content.tabs-content--active 
+  display: block
 
 .search__content-form
   display: flex
