add banner, products-popular, fix tabs

--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -5,6 +5,9 @@ block content
   include /pages/home/search/index
   include /pages/home/categories/index
   include /pages/home/products/index
+  include /pages/home/banner/index
+  include /pages/home/products-popular/index
+
 
 
 
