--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -1,1 +1,48 @@
-footer.footer FOOTER
+footer.footer 
+  .container 
+    .footer__top 
+      .footer__top-inner 
+        .footer__top-item.footer__top-newslatter 
+          span.footer__top-title Подпишитесь на нашу рассылку и узнавайте о акция быстрее
+          form.footer__top-form(action="#") 
+            input.footer__top-input(type="text" placeholder="Введите ваш e-mail:")
+            button.footer__top-btn(type="submit") Отправить
+        .footer__top-item 
+          span.footer__top-title Информация
+          ul.footer__list 
+            li.footer__list-item
+              a.footer__list-link(href="#") О компании
+            li.footer__list-item
+              a.footer__list-link(href="#") Контакты
+            li.footer__list-item
+              a.footer__list-link(href="#") Акции
+            li.footer__list-item
+              a.footer__list-link(href="#") Магазины
+        .footer__top-item 
+          span.footer__top-title Интернет-магазин
+          ul.footer__list 
+            li.footer__list-item
+              a.footer__list-link(href="#") Доставка и самовывоз
+            li.footer__list-item
+              a.footer__list-link(href="#") Оплата
+            li.footer__list-item
+              a.footer__list-link(href="#") Возврат-обмен
+            li.footer__list-item
+              a.footer__list-link(href="#") Новости
+        .footer__top-item.footer__top-social 
+        ul.footer-social
+          li.footer-social__item
+            a.footer-social__link(href="#") 
+              img(src="images/instagram-icon.svg", alt="Instagram")
+          li.footer-social__item
+            a.footer-social__link(href="#") 
+              img(src="images/vk-icon.svg", alt="Vk")
+          li.footer-social__item
+            a.footer-social__link(href="#") 
+              img(src="images/facebook-icon.svg", alt="Facebook")
+          li.footer-social__item
+            a.footer-social__link(href="#") 
+              img(src="images/youtube-icon.svg", alt="Youtube")
+    .footer__bottom 
+      a.footer__bottom-link(href="#") Договор оферты
+      a.footer__bottom-link(href="#") Политика обработки персональных данных
