--- a/src/layout/footer/footer.sass
+++ b/src/layout/footer/footer.sass
@@ -2,3 +2,75 @@
   flex-grow: 0
   flex-shrink: 0
   flex-basis: auto
+  padding-top: 42px
+  padding-bottom: 22px
+  background: #F0F0F4
+
+.footer__top-inner
+  display: flex
+  justify-content: space-between
+  margin-bottom: 46px
+
+.footer__top-item 
+  max-width: 200px
+
+.footer__top-newslatter
+  max-width: 295px
+
+.footer__top-title
+  display: block
+  font-weight: 700
+  font-size: 14px
+  line-height: 17px
+
+.footer__top-form
+  margin-top: 34px
+  display: flex
+  justify-content: space-between
+
+.footer__top-input
+  padding: 0 12px
+  border: none
+  color: #C4C4C4
+  background-color: #fff
+  font-size: 14px
+  line-height: 17px
+
+  &::placeholder
+    color: #C4C4C4  
+
+.footer__top-btn
+  padding: 10px 16px
+  border: none
+  color: #fff
+  background-color: #1C62CD
+  font-weight: 600
+  font-size: 11px
+  line-height: 13px
+  letter-spacing: 0.12em
+  text-transform: uppercase
+  cursor: pointer
+
+.footer__list
+  font-size: 14px
+  line-height: 22px
+
+.footer__bottom
+  display: flex
+  justify-content: center
+
+.footer__bottom-link
+  margin: 0 40px
+  color: #48494D
+  font-size: 10px
+  line-height: 12px
+
+.footer__top-social
+  max-width: 250px
+
+.footer-social
+  display: flex
+  align-items: center
+
+.footer-social__item + .footer-social__item
+  margin-left: 30px
