--- a/src/pages/home/products-popular/index.pug
+++ b/src/pages/home/products-popular/index.pug
@@ -15,16 +15,16 @@ section.products
           .products__slider.swiper
             .swiper-wrapper 
               .products__slider-item.swiper-slide 
-                .product-item__wrapper
+                .product-item__wrapper.product-item__not-available
                   button.product-item__favorite
                   button.product-item__basket 
                     img.product-item__basket-img(src="images/basket-icon-white.svg", alt="Basket white")
                   a.product-item__notify-link(href="#") 
                     span Сообщить о поступлении
-                  a.product-item(href="#") 
+                  a.product-item.product-item--sale(href="#") 
                     p.product-item__hover-text посмотреть товар
-                    img.product-item__img(src="images/product-1.png", alt="Product 1")
-                    span.product-item__title  Водонепроницаемый Рюкзак
+                    img.product-item__img(src="images/product-5.png", alt="Product 1")
+                    span.product-item__title  BRP Audio-портативная система
                     p.product-item__price 9 800 ₽
                     p.product-item__notify-text нет в наличии
               .products__slider-item.swiper-slide 
@@ -34,24 +34,11 @@ section.products
                     img.product-item__basket-img(src="images/basket-icon-white.svg", alt="Basket white")
                   a.product-item__notify-link(href="#") 
                     span Сообщить о поступлении
-                  a.product-item.product-item--sale(href="#") 
-                    p.product-item__hover-text посмотреть товар
-                    img.product-item__img(src="images/product-2.png", alt="Product 1")
-                    span.product-item__title  Спасательный жилет BRP Men's Airflow PFD
-                    p.product-item__price 6 900 ₽
-                    p.product-item__notify-text нет в наличии
-              .products__slider-item.swiper-slide
-                .product-item__wrapper
-                  button.product-item__favorite
-                  button.product-item__basket 
-                    img.product-item__basket-img(src="images/basket-icon-white.svg", alt="Basket white")
-                  a.product-item__notify-link(href="#") 
-                    span Сообщить о поступлении
                   a.product-item(href="#") 
                     p.product-item__hover-text посмотреть товар
-                    img.product-item__img(src="images/product-3.png", alt="Product 1")
-                    span.product-item__title  BRP Audio-Premium System
-                    p.product-item__price 68 000 ₽
+                    img.product-item__img(src="images/product-6.png", alt="Product 6")
+                    span.product-item__title  Garmin Echomap Plus 62cv
+                    p.product-item__price 45 800 ₽
                     p.product-item__notify-text нет в наличии
               .products__slider-item.swiper-slide
                 .product-item__wrapper.product-item__not-available
@@ -62,9 +49,22 @@ section.products
                     span Сообщить о поступлении
                   a.product-item.product-item--sale(href="#") 
                     p.product-item__hover-text посмотреть товар
-                    img.product-item__img(src="images/product-4.png", alt="Product 1")
-                    span.product-item__title  Спасательное снаряжение
-                    p.product-item__price 9 800 ₽
+                    img.product-item__img(src="images/product-7.png", alt="Product 1")
+                    span.product-item__title  RF D.E.S.S.TM Key
+                    p.product-item__price 68 000 ₽
+                    p.product-item__notify-text нет в наличии
+              .products__slider-item.swiper-slide
+                .product-item__wrapper
+                  button.product-item__favorite
+                  button.product-item__basket 
+                    img.product-item__basket-img(src="images/basket-icon-white.svg", alt="Basket white")
+                  a.product-item__notify-link(href="#") 
+                    span Сообщить о поступлении
+                  a.product-item(href="#") 
+                    p.product-item__hover-text посмотреть товар
+                    img.product-item__img(src="images/product-8.png", alt="Product 1")
+                    span.product-item__title  Мужской костюм 3мм
+                    p.product-item__price 7 000 ₽
                     p.product-item__notify-text нет в наличии
               .products__slider-item.swiper-slide
                 .product-item__wrapper.product-item__not-available
